First pass at filter refactor

--- a/_includes/filter.html
+++ b/_includes/filter.html
@@ -1,16 +1,18 @@
-<ul class="usa-accordion filter">
-  <li>
-    <button class="usa-accordion-button"
+<div class="usa-accordion filter">
+  <h2 class="usa-accordion__heading">
+    <button class="usa-accordion__button"
       aria-expanded="false" aria-controls="filter">
       <p class="filter-button-title">{{ page.filter_button_title }}</p>
       <p class="filter-button-message">{{ page.filter_button_message }}</p>
     </button>
-    <div id="filter" class="usa-accordion-content">
-      {% for filter in include.filters %}
-      <div class="filter-section">
-        <fieldset class="usa-fieldset-inputs">
-          <legend class="filter-category usa-width-one-fourth">{{ filter.title }}</legend>
-          <ul class="usa-unstyled-list usa-width-three-fourths">
+  </h2>
+  <div id="filter" class="usa-accordion__content">
+    {% for filter in include.filters %}
+    <div class="filter-section">
+      <fieldset class="usa-fieldset">
+        <div class="grid-row">
+          <legend class="filter-category tablet:grid-col-3">{{ filter.title }}</legend>
+          <ul class="add-list-reset tablet:grid-col">
             <li>
               <input id="{{ filter.key }}-all" type="radio" checked name="{{ filter.key }}">
               <label class="usa-button usa-button-outline" for="{{ filter.key }}-all">All</label>
@@ -36,13 +38,13 @@
             {% assign slug = value | append: '' | slugify %}
             <li>
               <input id="{{ filter.key }}-{{ value }}" type="radio" name="{{ filter.key }}" value="{{ value | jsonify | xml_escape }}">
-              <label class="usa-button usa-button-outline" for="{{ filter.key }}-{{ value }}">{{ value }}</label>
+              <label class="usa-button usa-button--outline" for="{{ filter.key }}-{{ value }}">{{ value }}</label>
             </li>
             {% endfor %}
           </ul>
-        </fieldset>
-      </div>
-      {% endfor %}
+        </div>
+      </fieldset>
     </div>
-  </li>
+    {% endfor %}
+  </div>
 </ul>
