--- a/_sass/custom/all.scss
+++ b/_sass/custom/all.scss
@@ -6,11 +6,10 @@
 @import "components/billboard";
 @import "components/card";
 @import "components/contact";
-//@import "components/filter";
+@import "components/filter";
 @import "components/footer";
 @import "components/hero";
 @import "components/layout";
-//@import "components/filter";
 @import "components/logo";
 @import "components/navigation";
 //@import "components/project-single";
