--- a/_sass/custom/core/_variables.scss
+++ b/_sass/custom/core/_variables.scss
@@ -26,3 +26,5 @@ $color-primary-darkest: 'primary-dark';
 
 $nav-width: 'tablet-lg';
 $display-kerning: 'ls-neg-1';
+$small-screen: 'mobile-lg';
+$medium-screen: 'tablet';
