--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -15,8 +15,10 @@ scripts:
 {{ content }}
 
 {% include filter.html items=site.projects filters=layout.filters %}
-<div class="project-container">
-  {% for project in site.projects reversed %}
-    {% include projects.html %}
-  {% endfor %}
+<div class="margin-top-4">
+  <div class="grid-row grid-gap">
+    {% for project in site.projects reversed %}
+      {% include projects.html %}
+    {% endfor %}
+  </div>
 </div>
