Refine filter button

--- a/_sass/custom/_uswds-theme-custom-styles.scss
+++ b/_sass/custom/_uswds-theme-custom-styles.scss
@@ -49,7 +49,7 @@ h1 {
     }
   }
   > h2 {
-    color: color('primary');
+    color: color('secondary');
     @include at-media('tablet') {
       @include u-font('heading', '2xl');
     }
