--- a/_sass/settings/_uswds-theme-color.scss
+++ b/_sass/settings/_uswds-theme-color.scss
@@ -48,7 +48,7 @@ $theme-color-primary-darkest:       false;
 // Secondary colors
 $theme-color-secondary-family:      'mint-cool';
 $theme-color-secondary-lightest:    false;
-$theme-color-secondary-lighter:     'mint-cool-5';
+$theme-color-secondary-lighter:     'gray-cool-2';
 $theme-color-secondary-light:       'mint-cool-30';
 $theme-color-secondary:             'mint-cool-60';
 $theme-color-secondary-vivid:       'mint-cool-30v';
