--- a/_sass/custom/components/_filter.scss
+++ b/_sass/custom/components/_filter.scss
@@ -1,7 +1,7 @@
 // Filter ------------- //
 
 .filter {
-  margin-bottom: 6rem;
+  margin-bottom: units(8);
 
   > li {
     background-color: color('white');
@@ -16,17 +16,14 @@
   .usa-accordion__button {
     background-color: color('secondary-lighter');
     color: color('secondary-dark');
+    border-left: units(0.5) solid color('secondary-vivid');
 
     p {
       margin: 0;
     }
 
     &:hover {
-      background-color: color('secondary-dark');
-
-      p {
-        color: color('white');
-      }
+      background-color: color('gray-cool-4');
     }
   }
 
@@ -83,26 +80,26 @@
 }
 
 .filter-button-title {
-  font-size: 24px;
+  @include u-font('heading', '2xl');
 }
 
 .filter-button-message {
-  @include u-font('body', '2xs');
-  color: color('ink');
-  font-weight: fw('normal');
+  @include u-font('heading', 'xs');
+  color: color('secondary');
+  font-weight: fw('bold');
 }
 
 .filter-section {
-  border-bottom: 2px solid $color-white;
+  border-bottom: units(2px) solid color($color-white);
   clear: left;
-  padding: 2.1rem 3rem;
+  padding: units(2) units(4);
 }
 
 .filter-category {
   @include u-font('heading', 'sm');
   font-weight: fw('bold');
-  margin-bottom: 7px;
-  margin-top: 7px;
+  margin-bottom: units(1);
+  margin-top: units(1);
 }
 
 .filter-selection {
