--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,26 +1,28 @@
-<div class="tablet-lg:grid-col-4 display-flex">
-  <article class="card js-filterable" {% for filter in layout.filters %}
+<div class="project-col tablet-lg:grid-col-4 js-filterable" {% for filter in layout.filters %}
   data-{{ filter.key }}='{{ project[filter.key] | jsonify | xml_escape }}'{% endfor %}>
-    <a class="card-link" href="{{ project.url | prepend: site.baseurl }}" aria-hidden="true" tabindex="-1"></a>
-    <div class="card-image"
-      style="background-image: url(
-      {% if project.image_thumbnail %}
-        {{ project.image_thumbnail | prepend: site.baseurl }}
-      {% else %}
-        {{ project.image | prepend: site.baseurl }}
-      {% endif %}
-      );">
-    </div>
-    <div class="card-banner">
-      <h3 class="card-description">
-        <span>{{ project.title }}</span>
-      </h3>
-      <p class="card-summary">{{ project.summary }}</p>
-    </div>
-    <a class="card-read" href="{{ project.url | prepend: site.baseurl }}">
-      Read more
-      <span class="usa-sr-only">about {{ project.title }}</span>
-      {% include icons/arrow-right.svg %}
-    </a>
-  </article>
+  <div class="display-flex height-full">
+    <article class="card">
+      <a class="card-link" href="{{ project.url | prepend: site.baseurl }}" aria-hidden="true" tabindex="-1"></a>
+      <div class="card-image"
+        style="background-image: url(
+        {% if project.image_thumbnail %}
+          {{ project.image_thumbnail | prepend: site.baseurl }}
+        {% else %}
+          {{ project.image | prepend: site.baseurl }}
+        {% endif %}
+        );">
+      </div>
+      <div class="card-banner">
+        <h3 class="card-description">
+          <span>{{ project.title }}</span>
+        </h3>
+        <p class="card-summary">{{ project.summary }}</p>
+      </div>
+      <a class="card-read" href="{{ project.url | prepend: site.baseurl }}">
+        Read more
+        <span class="usa-sr-only">about {{ project.title }}</span>
+        {% include icons/arrow-right.svg %}
+      </a>
+    </article>
+  </div>
 </div>
