--- a/_sass/custom/components/_filter.scss
+++ b/_sass/custom/components/_filter.scss
@@ -29,20 +29,20 @@
 
   .usa-accordion__content {
     background-color: color('secondary-lighter');
-    margin-top: 2px;
+    margin-top: units(2px);
     padding: 0;
   }
 
   .usa-button--outline {
     background-color: transparent;
-    box-shadow: inset 0 0 0 2px $color-brand-dark;
+    box-shadow: inset 0 0 0 units(2px) color($color-brand-dark);
     color: color('secondary-dark');
     font-weight: fw('bold');
 
     &:hover {
       background-color: transparent;
-      box-shadow: inset 0 0 0 2px $color-brand-dark-hover;
-      color: color('secondary-dark')-hover;
+      box-shadow: inset 0 0 0 units(2px) color($color-brand-dark-hover);
+      color: color($color-brand-dark-hover);
     }
 
     &:focus {
@@ -59,7 +59,7 @@
     color: color('white');
 
     &:hover {
-      background-color: color('secondary-dark')-hover;
+      background-color: color($color-brand-dark-hover);
     }
   }
 
