Refactor single project page

--- a/_sass/custom/all.scss
+++ b/_sass/custom/all.scss
@@ -12,7 +12,7 @@
 @import "components/layout";
 @import "components/logo";
 @import "components/navigation";
-//@import "components/project-single";
+@import "components/project-single";
 @import "components/wrapper";
 
 // Pages --------- //
