--- a/_sass/custom/all.scss
+++ b/_sass/custom/all.scss
@@ -16,5 +16,5 @@
 @import "components/wrapper";
 
 // Pages --------- //
-//@import "pages/projects";
-//@import "pages/team";
+@import "pages/projects";
+@import "pages/team";
