--- a/_sass/custom/pages/_projects.scss
+++ b/_sass/custom/pages/_projects.scss
@@ -1,5 +1,5 @@
 .project-container {
-  @include media($medium-screen) {
+  @include at-media($medium-screen) {
     display: flex;
     flex-wrap: wrap;
     width: 102.5%;
