--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -1,10 +1,10 @@
 ---
 layout: page
 filters:
-  - key: year
-    title: Year Completed
-  - key: domain
-    title: Domain
+- key: status
+    title: Status  
+- key: year
+    title: Year Started
   - key: agency
     title: Agency Collaborator
     multiple: true
