--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -4,9 +4,11 @@ filters:
 - key: status
     title: Status  
 - key: year
-    title: Year Started
+    title: Year
 - key: agency
-    title: Agency Collaborator
+    title: Agency 
+- key: resources
+    title: Resources
     multiple: true
 scripts:
   - src: /assets/js/filters.js
