--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -9,7 +9,8 @@ filters:
     title: Agency
     multiple: true
 - key: resources
-    title: Resources    
+    title: Resources  
+    multiple: true
 scripts:
   - src: /assets/js/filters.js
 ---
