--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -9,7 +9,12 @@ filters:
   title: Agency
   multiple: true
 - key: resources
-  title: Resources  
+  title: Resources
+  fields:
+    - abstract
+    - analysis-plan
+    - article
+    - intervention
   multiple: true
 scripts:
   - src: /assets/js/filters.js
