--- a/_includes/filter.html
+++ b/_includes/filter.html
@@ -15,29 +15,33 @@
               <input id="{{ filter.key }}-all" type="radio" checked name="{{ filter.key }}">
               <label class="usa-button usa-button-outline" for="{{ filter.key }}-all">All</label>
             </li>
-            {% capture void %}
-            {% assign values = '' | split: '' %}
-            {% for item in include.items %}
-              {% assign item_value = item[filter.key] %}
-              {% unless item_value %}{% continue %}{% endunless %}
-              {% if filter.multiple %}
-                {% for value in item_value %}
-                  {% assign values = values | push: value %}
-                {% else %}
-                  {% assign values = values | push: item_value %}
+            {% if filter.fields %}
+              {% assign values = filter.fields %}
+            {% else %}
+              {% capture void %}
+                {% assign values = '' | split: '' %}
+                {% for item in include.items %}
+                  {% assign item_value = item[filter.key] %}
+                  {% unless item_value %}{% continue %}{% endunless %}
+                  {% if filter.multiple %}
+                    {% for value in item_value %}
+                      {% assign values = values | push: value %}
+                    {% else %}
+                      {% assign values = values | push: item_value %}
+                    {% endfor %}
+                  {% else %}
+                    {% assign values = values | push: item_value %}
+                  {% endif %}
                 {% endfor %}
-              {% else %}
-                {% assign values = values | push: item_value %}
-              {% endif %}
-            {% endfor %}
+              {% endcapture %}
+            {% endif %}
             {% assign values = values | uniq | sort() %}
-            {% endcapture %}
             {% for value in values %}
-            {% assign slug = value | append: '' | slugify %}
-            <li>
-              <input id="{{ filter.key }}-{{ value }}" type="radio" name="{{ filter.key }}" value="{{ value | jsonify | xml_escape }}">
-              <label class="usa-button usa-button-outline" for="{{ filter.key }}-{{ value }}">{{ value }}</label>
-            </li>
+              {% assign slug = value | append: '' | slugify %}
+              <li>
+                <input id="{{ filter.key }}-{{ value }}" type="radio" name="{{ filter.key }}" value="{{ value | jsonify | xml_escape }}">
+                <label class="usa-button usa-button-outline" for="{{ filter.key }}-{{ value }}">{{ value | capitalize }}</label>
+              </li>
             {% endfor %}
           </ul>
         </fieldset>
