--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,23 +10,29 @@
       <h2 class="footer-links-heading">Navigate</h2>
       <ul class="usa-unstyled-list">
         <li>
-          <a href="{{ site.baseurl }}/about/">About</a>
+          <a href="{{ site.baseurl }}/about/">Mission</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/methods/">Methods</a>
+          <a href="{{ site.baseurl }}/evalportfolio/">Evaluation portfolio</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/work/">Work</a>
+          <a href="{{ site.baseurl }}/methods/">Evaluation methods</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/team/">Team</a>
+          <a href="{{ site.baseurl }}/usingevidence/">Using evidence</a>
         </li>
          <li>
-          <a href="{{ site.baseurl }}/events/">Events</a>
+          <a href="{{ site.baseurl }}/toolkits/">Evidence Act toolkits</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/contact/">Contact</a>
+          <a href="{{ site.baseurl }}/opps/">Opportunities</a>
         </li>
+        <li>
+          <a href="{{ site.baseurl }}/events/">Events</a>
+        </li>        
+        <li>
+          <a href="{{ site.baseurl }}/press/">Press</a>
+        </li>        
       </ul>
     </div>
     <div class="footer-links">
@@ -62,3 +68,4 @@
   </div>
 </footer>
 {% include javascript.html %}
+
