--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,20 +14,11 @@ layout: base
     {{ page.intro | markdownify }}
   </div>
 </section>
-{% endif %}
-<section class="background-medium">
-  <div class="usa-grid main-content">
-     <div class= "usa-grid" align="center">
-       <h2>Join the OES Team:<br><a href="https://oes.gsa.gov/contact/">Fellowship Applications Now Open</a></h2>
-    </div>
-  </div>
-    </section>
 <section class="usa-section background-tint">
   <div class="usa-grid main-content">
      <div class= "usa-grid" align="center">
-      <div class="videoWrapper">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/T_Vk4gwCs58" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-       </div>   
+          <h2>Learning what works (and what doesn't)</h2>
+       <p>OES works across the Federal government to help agencies build and use evidence.</p>
   </div>
 </section>
 <section class="usa-section background-medium">
