--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,8 @@ layout: base
   <div class="usa-width-two-thirds">
     {{ page.intro | markdownify }}
   </div>
-</section>
+</section> 
+{% endif %}
 <section class="usa-section background-tint">
   <div class="usa-grid main-content">
      <div class= "usa-grid" align="center">
