--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -50,7 +50,7 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 3: Embed evaluations</h3>
-        <p>"Tests" to OES are opportunities to truly learn what works - and are grounded in scientific methods.</p> 
+        <p>Evaluations are opportunities to truly learn what works - and are grounded in scientific methods.</p> 
             <p>- Whenever possible, we aim to <a href="https://oes.gsa.gov/methodsdetail/#randomization-code-review">randomly assign</a> individuals or groups to a treatment condition (the evidence-based program change). This is what enables us to conclude that improvements in outcomes were actually caused by the program change(s) that we tested.</p> 
             <p>- In designing evaluations, we give particular attention to <a href="https://oes.gsa.gov/methodsdetail/#statistical-power">statistical power</a>. Briefly, statistical power is a test’s ability to correctly detect that a program change was effective (assuming that it was indeed effective).</p> 
             <p>- Finally, one of the most important steps we take is committing to a detailed <a href="https://oes.gsa.gov/methodsdetail/#analysis-plans">analysis plan</a> before we begin working with the data. As the recent replication crisis in the social sciences has shown, if scientists allow themselves too much flexibility in analyzing data they may get results that are not reliable but instead reflect inadvertent “fishing” or “p-hacking.”</p> 
