--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,10 +16,7 @@
           <a href="{{ site.baseurl }}/evalportfolio/">Evaluation portfolio</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/methods/">Evaluation methods</a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/usingevidence/">Using evidence</a>
+          <a href="{{ site.baseurl }}/resouces/">Resources</a>
         </li>
          <li>
           <a href="{{ site.baseurl }}/toolkits/">Evidence Act toolkits</a>
