--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       <h2 class="footer-links-heading">Navigate</h2>
       <ul class="usa-unstyled-list">
         <li>
-          <a href="{{ site.baseurl }}/about/">Mission</a>
+          <a href="{{ site.baseurl }}/about/">About</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/evalportfolio/">Evaluation portfolio</a>
