--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -1,3 +1,6 @@
+// Custom colors ------ //
+@import "custom-colors";
+
 // Core --------- //
 @import "core/typography";
 
@@ -22,3 +25,4 @@
 
 // Custom ------------ //
 @import "custom";
+
