--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -7,34 +7,37 @@ layout: base
     <h1>{{ page.title }}</h1>
   </div>
 </div>
-<section class="usa-section background-tint">
+<section class="usa-section background-tint" style="padding-top: 2rem;">
   <div class="usa-grid">
-  <div align="center">
     <p>
       The following toolkits were designed for Evaluation Officers and
       related staff to support implementation of Title I of the Evidence Act.
     </p>
+  <div align="center">
   </div>
   <div class="toolkits-div">
     <div class="toolkit-div">
-      <h2> Capacity Assessment Tool </h2>
+      <h3><i> Insert Icon </i><h3>
+      <a href="{{ site.baseurl}}/learningagenda/"> Capacity Assessment Tool </a>
     </div>
     <div class="toolkit-div">
-      <h2> Learning Agenda Toolkit </h2>
+      <h3><i> Insert Icon </i><h3>
+      <a href="{{ site.baseurl}}/learningagenda/"> Learning Agenda Toolkit </a>
     </div>
     <div class="toolkit-div">
-      <h2> Annual Evaluation Plan Toolkit </h2>
+      <h3><i> Insert Icon </i><h3>
+      <a href="{{ site.baseurl}}/annualevaluation/"> Annual Evaluation Plan Toolkit </a>
     </div>
   </div>
   <hr/>
-  <table class="download-footer" border="0">
+  <table class="download-footer" style="border: none;">
     <tr>
       <td> Downloads </td>
       <td> Evidence Act: Title I Overview </td>
       <td> Quick Reference Sheet </td>
     </tr>
     <tr>
-      <td><img src="{{ '/assets/img/icons/download.png' | prepend: site.baseurl }}" height="50" width="50"> </img></td>
+      <td style="padding-left: 47px;"><img src="{{ '/assets/img/icons/download.png' | prepend: site.baseurl }}" height="50" width="50"> </img></td>
       <td> Learning Agenda and Annual Evaluation Plan Master Checklist </td>
       <td> Engaging Sub-agencies in Title I implementation </td>
     </tr>
