created home pages for both toolkits

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -18,28 +18,28 @@ layout: base
   <div class="toolkits-div">
     <div class="toolkit-div">
       <h3><i> Insert Icon </i><h3>
-      <a href="{{ site.baseurl}}/learningagenda/"> Capacity Assessment Tool </a>
+      <a href="{{ site.baseurl}}/learningagenda/" class="tool-link"> Capacity Assessment Tool </a>
     </div>
     <div class="toolkit-div">
       <h3><i> Insert Icon </i><h3>
-      <a href="{{ site.baseurl}}/learningagenda/"> Learning Agenda Toolkit </a>
+      <a href="{{ site.baseurl}}/learningagenda/" class="tool-link"> Learning Agenda Toolkit </a>
     </div>
     <div class="toolkit-div">
       <h3><i> Insert Icon </i><h3>
-      <a href="{{ site.baseurl}}/annualevaluation/"> Annual Evaluation Plan Toolkit </a>
+      <a href="{{ site.baseurl}}/annualevaluation/" class="tool-link"> Annual Evaluation Plan Toolkit </a>
     </div>
   </div>
   <hr/>
   <table class="download-footer" style="border: none;">
-    <tr>
-      <td> Downloads </td>
-      <td> Evidence Act: Title I Overview </td>
-      <td> Quick Reference Sheet </td>
+    <tr class="table-border">
+      <td class="table-border"> Downloads </td>
+      <td class="table-border"> Evidence Act: Title I Overview </td>
+      <td class="table-border"> Quick Reference Sheet </td>
     </tr>
     <tr>
-      <td style="padding-left: 47px;"><img src="{{ '/assets/img/icons/download.png' | prepend: site.baseurl }}" height="50" width="50"> </img></td>
-      <td> Learning Agenda and Annual Evaluation Plan Master Checklist </td>
-      <td> Engaging Sub-agencies in Title I implementation </td>
+      <td style="padding-left: 45px;"><img src="{{ '/assets/img/icons/download.png' | prepend: site.baseurl }}" height="50" width="50"> </img></td>
+      <td class="table-border"> Learning Agenda and Annual Evaluation Plan Master Checklist </td>
+      <td class="table-border"> Engaging Sub-agencies in Title I implementation </td>
     </tr>
   </table>
 </section>
