--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -32,12 +32,12 @@ layout: base
   <hr/>
   <table class="download-footer" style="border: none;">
     <tr class="table-border">
-      <td class="table-border"> Downloads </td>
+      <td class="table-border"><b> Downloads <b/></td>
       <td class="table-border"> Evidence Act: Title I Overview </td>
       <td class="table-border"> Quick Reference Sheet </td>
     </tr>
     <tr>
-      <td style="padding-left: 45px;"><img src="{{ '/assets/img/icons/download.png' | prepend: site.baseurl }}" height="50" width="50"> </img></td>
+      <td style="padding-left: 43px;"><img src="{{ '/assets/img/icons/download.png' | prepend: site.baseurl }}" height="50" width="50"> </img></td>
       <td class="table-border"> Learning Agenda and Annual Evaluation Plan Master Checklist </td>
       <td class="table-border"> Engaging Sub-agencies in Title I implementation </td>
     </tr>
