added flip feature to display questions on back of toolkit item cards

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,5 +1,6 @@
 <script src="{{ '/assets/js/lib/jquery-3.4.1.min.js' | prepend: site.baseurl  }}"></script>
 <script src="{{ '/assets/js/index.js' | prepend: site.baseurl  }}"></script>
+<script src="{{ '/assets/js/toolkits.js' | prepend: site.baseurl  }}"></script>
 
 <!--
   analytics for DAP, for more info visit
