--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,16 +13,16 @@
           <a href="{{ site.baseurl }}/about/">About</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/evalportfolio/">Evaluation portfolio</a>
+          <a href="{{ site.baseurl }}/work/">Evaluation portfolio</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/resouces/">Resources</a>
+          <a href="{{ site.baseurl }}/resources/">Resources</a>
         </li>
          <li>
           <a href="{{ site.baseurl }}/toolkits/">Evidence Act toolkits</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/opps/">Opportunities</a>
+          <a href="{{ site.baseurl }}/contact/">Opportunities</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/events/">Events</a>
