--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
           <a href="{{ site.baseurl }}/about/">About</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/work/">Evaluation portfolio</a>
+          <a href="{{ site.baseurl }}/work/">Evaluation Portfolio</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/resources/">Resources</a>
