--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
           <a href="{{ site.baseurl }}/resources/">Resources</a>
         </li>
          <li>
-          <a href="{{ site.baseurl }}/toolkits/">Evidence Act toolkits</a>
+          <a href="{{ site.baseurl }}/toolkits/">Evidence Act Toolkits</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/contact/">Opportunities</a>
