--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,16 +20,7 @@
         </li>
          <li>
           <a href="{{ site.baseurl }}/toolkits/">Evidence Act Toolkits</a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/contact/">Opportunities</a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/events/">Events</a>
-        </li>        
-        <li>
-          <a href="{{ site.baseurl }}/press/">Press</a>
-        </li>        
+        </li>              
       </ul>
     </div>
     <div class="footer-links">
@@ -41,8 +32,14 @@
       </ul>
     </div>
     <div class="footer-links">
-      <h2 class="footer-links-heading">Contact</h2>
+      <h2 class="footer-links-heading">Connect</h2>
       <ul class="usa-unstyled-list">
+        <li>
+          <a href="{{ site.baseurl }}/contact/">Opportunities</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/events/">Events</a>
+        </li>  
         <li>
           <a href="{{ site.baseurl }}/press/">Press</a>
         </li>
