--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,10 @@
           <a href="{{ site.baseurl }}/work/">Evaluation Portfolio</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/resources/">Resources</a>
+          <a href="{{ site.baseurl }}/resources/">Methods</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/resources/">Guides</a>
         </li>
          <li>
           <a href="{{ site.baseurl }}/toolkits/">Evidence Act Toolkits</a>
