--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
           <a href="{{ site.baseurl }}/work/">Evaluation Portfolio</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/resources/">Methods</a>
+          <a href="{{ site.baseurl }}/methods/">Methods</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/resources/">Guides</a>
