--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ layout: base
   <div class="usa-grid main-content">
      <div class= "usa-grid" align="center">
           <h2>Learning what works (and what doesn't)</h2>
-       <p>OES works across the Federal government to help agencies build and use evidence.</p>
+       <p>Based at the General Services Administration (GSA), OES is a team of interdisciplinary experts that works across government to help agencies build and use evidence. To date, OES has completed over 70 randomized evaluations with dozens of agency partners. OES follows the best practices in social science research to build evidence in order to be a leader in transparency and accountability.</p>
        <br/><center><img src="{{ '/assets/img/homepageabout.jpg' | prepend: site.baseurl }}" height="400" width="800"></center>
   </div>
 </section>
